--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,19 @@ source:
 
 build:
   number: 0
+  features:
+    -vc14
+
+requirements:
+  build:
+    - python  # [win]
+    - vc 9  # [win and py27]
+    - vc 10  # [win and py34]
+    - vc 14  # [win and py>=35]
+  run:
+    - vc 9  # [win and py27]
+    - vc 10  # [win and py34]
+    - vc 14  # [win and py>=35]
 
 test:
   commands:
