--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,8 +11,10 @@ source:
 
 build:
   number: 0
-  features:
-    -vc14
+    features:
+    - vc9   # [win and py27]
+    - vc10  # [win and py34]
+    - vc14  # [win and py>=35]
 
 requirements:
   build:
