--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,15 +12,18 @@ source:
 build:
   number: 0
   features:
+    - vc9   # [win and py27]
     - vc10  # [win and py34]
     - vc14  # [win and py>=35]
 
 requirements:
   build:
     - python  # [win]
+    - vc 9  # [win and py27]
     - vc 10  # [win and py34]
     - vc 14  # [win and py>=35]
   run:
+    - vc 9  # [win and py27]
     - vc 10  # [win and py34]
     - vc 14  # [win and py>=35]
 
