--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,8 @@ test:
     - test -e $PREFIX/lib/libblitz.a       # [unix]
     - test -e $PREFIX/lib/libblitz.so      # [linux]
     - test -e $PREFIX/lib/libblitz.dylib   # [osx]
+    - if not exist %PREFIX%\\lib\\blitz.dll exit 1  # [win]
+    - if not exist %PREFIX%\\lib\\blitz.lib exit 1  # [win]
 
 about:
   home: https://sourceforge.net/projects/blitz
