--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,9 +22,9 @@ requirements:
     - vc 9  # [win and py27]
     - vc 10  # [win and py34]
     - vc 14  # [win and py>=35]
-    - autoconf
-    - automake
-    - libtool
+    - autoconf  # [unix]
+    - automake  # [unix]
+    - libtool  # [unix]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   run:
@@ -46,7 +46,8 @@ test:
 
 about:
   home: https://sourceforge.net/projects/blitz
-  license: LGPL 3
+  license: LGPL-3.0-or-later
+  license_file: LICENSE
   summary: A C++ class library for scientific computing which provides performance on par with Fortran 77/90
 
 extra:
