--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,30 +1,37 @@
-{% set version = "0.10" %}
+{% set version = "1.0.1" %}
 
 package:
   name: libblitz
   version: {{ version }}
 
 source:
-  fn: blitz-{{ version }}.tar.gz
-  url: http://downloads.sourceforge.net/project/blitz/blitz/Blitz%2B%2B%20{{ version }}/blitz-{{ version }}.tar.gz
-  md5: 66268b92bda923735f2e3afc87dcb58a
+  git_url: https://github.com/blitzpp/blitz.git
+  git_rev: {{ version }}
 
 build:
-  number: 2
+  number: 1
   skip: true  # [win and py27]
   features:
     - vc9   # [win and py27]
     - vc10  # [win and py34]
     - vc14  # [win and py>=35]
+  run_exports:
+    - {{ pin_subpackage('libblitz', max_pin='x.x.x') }}
 
 requirements:
   build:
     - python  # [win]
-    - vc 9  # [win and py27]
+    - vc 9   # [win and py27]
     - vc 10  # [win and py34]
     - vc 14  # [win and py>=35]
+    - python 2  # [not win]
+    - autoconf  # [not win]
+    - automake  # [not win]
+    - libtool  # [not win]
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
   run:
-    - vc 9  # [win and py27]
+    - vc 9   # [win and py27]
     - vc 10  # [win and py34]
     - vc 14  # [win and py>=35]
 
@@ -39,6 +46,8 @@ test:
     - if not exist %PREFIX%\Library\lib\pkgconfig\blitz.pc exit 1  # [win]
     - if not exist %PREFIX%\Library\include\blitz\blitz.h exit 1  # [win]
     - if not exist %PREFIX%\Library\include\blitz\ms\bzconfig.h exit 1  # [win]
+    - conda inspect linkages -p $PREFIX libblitz  # [not win]
+    - conda inspect objects -p $PREFIX libblitz  # [osx]
 
 about:
   home: https://sourceforge.net/projects/blitz
@@ -48,3 +57,4 @@ about:
 extra:
   recipe-maintainers:
     - 183amir
+    - anjos
