--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,6 +24,7 @@ test:
     - test -e $PREFIX/lib/libblitz.a       # [unix]
     - test -e $PREFIX/lib/libblitz.so      # [linux]
     - test -e $PREFIX/lib/libblitz.dylib   # [osx]
+    - if not exist %PREFIX%\Library\bin\blitz.dll exit 1  # [win]
     - if not exist %PREFIX%\Library\lib\blitz.lib exit 1  # [win]
     - if not exist %PREFIX%\Library\lib\pkgconfig\blitz.pc exit 1  # [win]
     - if not exist %PREFIX%\Library\include\blitz\blitz.h exit 1  # [win]
