--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
 test:
   commands:
     - test -d $PREFIX/include/blitz        # [unix]
+    - test -e $PREFIX/include/blitz/gnu/bzconfig.h  # [unix]
     - test -e $PREFIX/lib/libblitz.a       # [unix]
     - test -e $PREFIX/lib/libblitz.so      # [linux]
     - test -e $PREFIX/lib/libblitz.dylib   # [osx]
