--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,8 +9,10 @@ source:
   git_rev: {{ version }}
 
 build:
-  number: 1
+  number: 2
   skip: true  # [win]
+  run_exports:
+    - {{ pin_subpackage('libblitz', max_pin='x.x.x') }}
 
 requirements:
   build:
